syntax = "proto3";
package content;
import "content/comment.enum.proto";
import "content/tag.model.proto";
import "user/user.model.proto";
import "utils/proto/go/go.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "xyz.hoper.protobuf.content";
option go_package = "github.com/liov/hoper/go/v2/protobuf/content";
option (go.file) = {non_omitempty:true};

message Comment{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey;"'}];
  user.UserMainInfo user = 2 [(go.field) = {tags:'gorm:"" annotation:"用户"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" annotation:"用户id"'}];
  string content = 3 [(go.field) = {tags:'gorm:"size:255;not null" annotation:"内容"'}];
  uint64 approveCount = 5 [(go.field) = {tags:'gorm:"size:20;default:0" annotation:"点赞数"'}];
  uint64 refID = 6 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" annotation:"相关id"'}];
  CommentType type = 12 [(go.field) = {tags:'gorm:"size:1;not null" validate:"required" annotation:"相关id"'}];
  uint64 parentID = 7 [(go.field) = {tags:'gorm:"size:20;default:0" annotation:"直接父评论ID"'}];
  uint64 rootID = 8 [(go.field) = {tags:'gorm:"size:20;default:0" annotation:"评论根ID"'}];
  user.UserMainInfo recvUser = 9 [(go.field) = {tags:'gorm:"" annotation:"接收人"'}];
  uint64 recvUserID = 10 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" annotation:"接收人id"'}];
  repeated Comment subComments = 11 [(go.field) = {tags:'gorm:"foreignkey:root_id" annotation:"子评论"'}];
  uint32 sequence = 4 [(go.field) = {tags:'gorm:"default:0" annotation:"同级别的分类可根据sequence的值来排序，置顶"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:CURRENT_TIMESTAMP()"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}